# ai_engineering

./: README.md
projects/agintic_ai/: Agentic AI Notes1.md  introduction-to-prompting-for-llm-reasoning-and-planning.ipynb  pyproject.toml
projects/agintic_ai/multi-agent-architecture-design/: demo.py  ex1.py  simple_agent.py  smolagents-architecture.py
projects/airflow/: README.md
projects/etl_tool/: pyproject.toml
projects/etl_tool/src/: main.py
projects/etl_tool/src/etl_tool/: __init__.py
projects/pyspark_app/: README.md  pyproject.toml
projects/pyspark_app/src/: main.py
projects/pyspark_app/src/pyspark_app/: __init__.py
projects/ray_certification/: README.md  install_ray.sh  pyproject.toml  requirements.txt
projects/ray_certification/src/: 01_02_03_intro_to_ray_train.ipynb  01_Intro_Ray_AI_Libs_Overview.ipynb  04b_Intro_Ray_Data_Structured.ipynb  04c_Intro_Ray_Data_Unstructured.ipynb  05_Intro_Ray_Serve_PyTorch.ipynb  main.py
projects/streaming_app/: .env  Dockerfile  README.md  pyproject.toml  redis-run.sh
projects/streaming_app/src/: create_topic.py  kafka_example.py  list_topics.py  list_topics_confluent.py  list_topics_nodeport.py  redis_example.py  service_config.py  spark-job.py  spark_example.py  spark_kafka_stream.py
projects/streaming_app/startup/: README.md  auto-start-services.sh  com.streaming.services.plist  com.streaming_app.kafka.plist  com.streaming_app.redis.plist  health-monitor.sh  kafka-start.sh  portforward-kafka.sh  redis-start.sh  robust-startup.sh  setup-auto-start.sh  spark-submit  startup.sh  verify-kafka-setup.sh
