[tool.poetry]
name = "ray_certification"
version = "0.1.0"
description = "ray certification"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
pandas = "^2.2.0"
fastapi = "^0.128.0"
ray = {version = "^2.28", extras = ["default"]}
xgboost = "^3.1.3"
scikit-learn = "^1.8.0"
fsspec = "^2026.1.0"
pyarrow = "^22.0.0"
uvicorn = "^0.40.0"
kagglehub = "^0.4.0"
matplotlib = "^3.10.8"
numpy = "^2.4.1"
torch = "^2.9.1"
torchvision = "^0.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
